[package]
name = "asteria"
version = "1.0.0"
edition = "2024"
description = "Safe Rust. No Deps. RL for the CPU."
license = "MIT"
repository = "https://github.com/dassarthak18/asteria"
readme = "README.md"
keywords = ["rl", "neural-networks", "rust", "machine-learning"]
categories = ["science", "algorithms"]

include = [
    "src/**",
    "examples/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
rand = "0.10.1"
rand_distr = "0.6.0"
